Delete comments and empty rules, change the extensions of images, fix 'span inside ul'

--- a/src/index.html
+++ b/src/index.html
@@ -37,13 +37,11 @@
       </ul>
       <div class="header__contact contact">
         <p class="contact__text">Need help? Contact us now:</p>
-        <a class="contact__number" href="tel:01-234-567"> 01 234 567 </a>
+        <a class="contact__number" href="tel:01-234-567">01 234 567</a>
         <button class="language">EN</button>
-        <!-- <span class="language">EN</span> -->
       </div>
 
       <button class="header__burger burger">
-        <!-- <img class="burger__icon" src="img/burger.svg" alt="burger"> -->
       </button>
       <a class="header__logo logo" href="#">
         <img class="logo__icon" src="img/logo.svg" alt="logo" />
@@ -103,7 +101,7 @@
     <section class="hero">
       <div class="hero__inner">
         <div class="hero__info">
-          <span class="hero__season"> spring / summer 2021 </span>
+          <span class="hero__season">spring / summer 2021</span>
           <h1 class="hero__title banner-title">
             <span>Sale 30%</span>Off everything
           </h1>
@@ -115,7 +113,7 @@
         </div>
         <img
           class="hero__img"
-          src="img/backgrounds/hero-bg.svg"
+          src="img/backgrounds/hero-bg.png"
           alt="hero-img"
         />
       </div>
@@ -175,7 +173,7 @@
         <div class="gallery__product product product--new">
           <img
             class="product__img"
-            src="img/products/radiant-tee.svg"
+            src="img/products/radiant-tee.jpg"
             alt="radiant-tee"
           />
           <h5 class="product__title">Radiant Tee</h5>
@@ -193,62 +191,10 @@
         <div class="gallery__product product product--top">
           <img
             class="product__img"
-            src="img/products/mona-pullover-hoodie.svg"
+            src="img/products/mona-pullover-hoodie.jpg"
             alt="mona-pullover-hoodie"
           />
           <h5 class="product__title">Mona Pullover Hoodlie</h5>
-          <!-- <div class="product__stars">
-            <svg
-              class="product__star"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M5.986 9.813L2.377 12l.957-4.102L.162 5.137l4.184-.356L5.986.926 7.627 4.78l4.21.356L8.64 7.898 9.596 12l-3.61-2.188z"
-                fill="#CDCDCD"
-              />
-            </svg>
-            <svg
-              class="product__star"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M5.986 9.813L2.377 12l.957-4.102L.162 5.137l4.184-.356L5.986.926 7.627 4.78l4.21.356L8.64 7.898 9.596 12l-3.61-2.188z"
-                fill="#CDCDCD"
-              />
-            </svg>
-            <svg
-              class="product__star"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M5.986 9.813L2.377 12l.957-4.102L.162 5.137l4.184-.356L5.986.926 7.627 4.78l4.21.356L8.64 7.898 9.596 12l-3.61-2.188z"
-                fill="#CDCDCD"
-              />
-            </svg>
-            <svg
-              class="product__star"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M5.986 9.813L2.377 12l.957-4.102L.162 5.137l4.184-.356L5.986.926 7.627 4.78l4.21.356L8.64 7.898 9.596 12l-3.61-2.188z"
-                fill="#CDCDCD"
-              />
-            </svg>
-            <svg
-              class="product__star"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M5.986 9.813L2.377 12l.957-4.102L.162 5.137l4.184-.356L5.986.926 7.627 4.78l4.21.356L8.64 7.898 9.596 12l-3.61-2.188z"
-                fill="#CDCDCD"
-              />
-            </svg>
-          </div> -->
           <div class="product__stars rating">
             <span class="rating__icon icon-star"></span>
             <span class="rating__icon icon-star"></span>
@@ -256,14 +202,14 @@
             <span class="rating__icon icon-star"></span>
             <span class="rating__icon icon-star"></span>
           </div>
-          <span class="product__reviews"> 83 Reviews </span>
+          <span class="product__reviews">83 Reviews</span>
           <span class="product__price">€54</span>
         </div>
 
         <div class="gallery__product product product--discount">
           <img
             class="product__img"
-            src="img/products/hero-hoodie.svg"
+            src="img/products/hero-hoodie.jpg"
             alt="hero-hoodie"
           />
           <h5 class="product__title">Hero Hoodie</h5>
@@ -281,7 +227,7 @@
         <div class="gallery__product product">
           <img
             class="product__img"
-            src="img/products/circle-hooded-ice-fleecce.svg"
+            src="img/products/circle-hooded-ice-fleecce.jpg"
             alt="circle-hooded-ice-fleecce"
           />
           <h5 class="product__title">Circe Hooded Ice Fleece</h5>
@@ -301,21 +247,18 @@
 
     <section class="banners">
       <div class="banners__banner banner" id="banner--discount">
-      <!-- <div class="banners__banner banner banner--discount"> -->
         <h3 class="banner__title banner-title">
-          up to <span>30% off</span> in everything
+          up to<span>30% off</span>in everything
         </h3>
       </div>
       <div class="banners__banner banner" id="banner--for-men">
-      <!-- <div class="banners__banner banner banner--for-men"> -->
         <h3 class="banner__title banner-title">
-          many <span>products</span> for mens
+          many<span>products</span>for mens
         </h3>
       </div>
       <div class="banners__banner banner" id="banner--dress-collection">
-      <!-- <div class="banners__banner banner banner--dress-collection"> -->
         <h3 class="banner__title banner-title">
-          beautiful <span>women dress</span> collection
+          beautiful<span>women dress</span>collection
         </h3>
       </div>
     </section>
@@ -329,7 +272,7 @@
         <div class="gallery__product product product--new">
           <img
             class="product__img"
-            src="img/products/radiant-tee.svg"
+            src="img/products/radiant-tee.jpg"
             alt="radiant-tee"
           />
           <h5 class="product__title">Radiant Tee</h5>
@@ -340,20 +283,13 @@
             <span class="rating__icon icon-star"></span>
             <span class="rating__icon icon-star"></span>
           </div>
-          <!-- <div class="rating">
-            <input class="rating__star" name="rating" type="radio">
-            <input class="rating__star" name="rating" type="radio">
-            <input class="rating__star" name="rating" type="radio">
-            <input class="rating__star" name="rating" type="radio">
-            <input class="rating__star" name="rating" type="radio">
-          </div> -->
           <span class="product__reviews">0 Reviews</span>
           <span class="product__price">€32</span>
         </div>
         <div class="gallery__product product product--top">
           <img
             class="product__img"
-            src="img/products/mona-pullover-hoodie.svg"
+            src="img/products/mona-pullover-hoodie.jpg"
             alt="mona-pullover-hoodie"
           />
           <h5 class="product__title">Mona Pullover Hoodlie</h5>
@@ -364,13 +300,13 @@
             <span class="rating__icon icon-star"></span>
             <span class="rating__icon icon-star"></span>
           </div>
-          <span class="product__reviews"> 83 Reviews </span>
+          <span class="product__reviews">83 Reviews</span>
           <span class="product__price">€54</span>
         </div>
         <div class="gallery__product product product--discount">
           <img
             class="product__img"
-            src="img/products/hero-hoodie.svg"
+            src="img/products/hero-hoodie.jpg"
             alt="hero-hoodie"
           />
           <h5 class="product__title">Hero Hoodie</h5>
@@ -387,7 +323,7 @@
         <div class="gallery__product product">
           <img
             class="product__img"
-            src="img/products/circle-hooded-ice-fleecce.svg"
+            src="img/products/circle-hooded-ice-fleecce.jpg"
             alt="circle-hooded-ice-fleecce"
           />
           <h5 class="product__title">Circe Hooded Ice Fleece</h5>
@@ -404,7 +340,7 @@
         <div class="gallery__product product product--discount">
           <img
             class="product__img"
-            src="img/products/hero-hoodie.svg"
+            src="img/products/hero-hoodie.jpg"
             alt="hero-hoodie"
           />
           <h5 class="product__title">Hero Hoodie</h5>
@@ -421,7 +357,7 @@
         <div class="gallery__product product">
           <img
             class="product__img"
-            src="img/products/circle-hooded-ice-fleecce.svg"
+            src="img/products/circle-hooded-ice-fleecce.jpg"
             alt="circle-hooded-ice-fleecce"
           />
           <h5 class="product__title">Circe Hooded Ice Fleece</h5>
@@ -438,7 +374,7 @@
         <div class="gallery__product product product--new">
           <img
             class="product__img"
-            src="img/products/radiant-tee.svg"
+            src="img/products/radiant-tee.jpg"
             alt="radiant-tee"
           />
           <h5 class="product__title">Radiant Tee</h5>
@@ -456,7 +392,7 @@
         <div class="gallery__product product product--top">
           <img
             class="product__img"
-            src="img/products/mona-pullover-hoodie.svg"
+            src="img/products/mona-pullover-hoodie.jpg"
             alt="mona-pullover-hoodie"
           />
           <h5 class="product__title">Mona Pullover Hoodlie</h5>
@@ -467,7 +403,7 @@
             <span class="rating__icon icon-star"></span>
             <span class="rating__icon icon-star"></span>
           </div>
-          <span class="product__reviews"> 83 Reviews </span>
+          <span class="product__reviews">83 Reviews</span>
           <span class="product__price">€54</span>
         </div>
       </div>
@@ -477,7 +413,7 @@
     <section class="subscribe">
       <div class="subscribe__info">
         <h3 class="subscribe__title section-title">
-          <span>Subscribe</span> for our newsletter
+          <span>Subscribe</span>for our newsletter
         </h3>
         <p class="subscribe__text">
           Subscribe to the email newsletter and stay up to date with all our
@@ -536,7 +472,7 @@
       </div>
       <div class="footer__lists">
         <ul class="footer__list">
-          <span class="footer__list-title">ABOUT US</span>
+          <li class="footer__list-title">ABOUT US</li>
           <li class="footer__item">
             <a href="#" class="footer__link">About Us</a>
           </li>
@@ -554,7 +490,7 @@
           </li>
         </ul>
         <ul class="footer__list">
-          <span class="footer__list-title">PRODUCT RANGE</span>
+          <li class="footer__list-title">PRODUCT RANGE</li>
           <li class="footer__item">
             <a href="#" class="footer__link">For Him</a>
           </li>
@@ -569,7 +505,7 @@
           </li>
         </ul>
         <ul class="footer__list">
-          <span class="footer__list-title">Lorem ipsum</span>
+          <li class="footer__list-title">Lorem ipsum</li>
           <li class="footer__item">
             <a href="#" class="footer__link">Dolor sit</a>
           </li>
