--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Visit Luma and find out about Diverse Fashion Lines and Designer Wear. Start Shopping Now. Find the highest quality clothing, accessories and footwear.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Luma</title>
@@ -15,22 +16,22 @@
     <header class="header">
       <ul class="header__socials socials">
         <li class="socials__item">
-          <a class="socials__link" href="#">
+          <a class="socials__link" href="#" aria-label="linkedin">
             <span class="socials__icon icon-linkedin"></span>
           </a>
         </li>
         <li class="socials__item">
-          <a class="socials__link" href="#">
+          <a class="socials__link" href="#" aria-label="facebook">
             <span class="socials__icon icon-facebook"></span>
           </a>
         </li>
         <li class="socials__item">
-          <a class="socials__link" href="#">
+          <a class="socials__link" href="#" aria-label="twitter">
             <span class="socials__icon icon-twitter"></span>
           </a>
         </li>
         <li class="socials__item">
-          <a class="socials__link" href="#">
+          <a class="socials__link" href="#" aria-label="instagram">
             <span class="socials__icon icon-instagram"></span>
           </a>
         </li>
@@ -41,8 +42,8 @@
         <button class="language">EN</button>
       </div>
 
-      <button class="header__burger burger">
-      </button>
+      <span class="header__burger burger">
+      </span>
       <a class="header__logo logo" href="#">
         <img class="logo__icon" src="img/logo.svg" alt="logo" />
       </a>
@@ -127,7 +128,7 @@
           alt="fast-delivery"
         />
         <div class="feature__description">
-          <h3 class="feature__title">Free Delivery</h3>
+          <h4 class="feature__title">Free Delivery</h4>
           <p class="feature__text">For all order over €200</p>
         </div>
       </div>
@@ -138,7 +139,7 @@
           alt="month-return"
         />
         <div class="feature__description">
-          <h3 class="feature__title">30 Days Return</h3>
+          <h4 class="feature__title">30 Days Return</h4>
           <p class="feature__text">If goods have problems</p>
         </div>
       </div>
@@ -149,7 +150,7 @@
           alt="secure-payment"
         />
         <div class="feature__description">
-          <h3 class="feature__title">Secure Payment</h3>
+          <h4 class="feature__title">Secure Payment</h4>
           <p class="feature__text">Payment upon receipt after verification</p>
         </div>
       </div>
@@ -160,7 +161,7 @@
           alt="daily-support"
         />
         <div class="feature__description">
-          <h3 class="feature__title">24/7 Support</h3>
+          <h4 class="feature__title">24/7 Support</h4>
           <p class="feature__text">Delicated support</p>
         </div>
       </div>
@@ -427,11 +428,11 @@
           placeholder="Enter your e-mail"
         />
         <div class="form__agreement">
-          <input class="form__checkbox" type="checkbox" />
-          <span class="form__agreement-text">
+          <input class="form__checkbox" type="checkbox" id="agreement-checkbox"/>
+          <label class="form__agreement-text" for="agreement-checkbox">
             I consent to the processing of personal data and agree to the
             <a href="#">Privacy policy</a>
-          </span>
+          </label>
         </div>
         <button type="submit" class="form__btn btn">Subscribe</button>
       </form>
@@ -444,22 +445,22 @@
         </a>
         <ul class="footer__socials socials">
           <li class="socials__item">
-            <a class="socials__link" href="#">
+            <a class="socials__link" href="#" aria-label="linkedin">
               <span class="socials__icon icon-linkedin"></span>
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__link" href="#">
+            <a class="socials__link" href="#" aria-label="facebook">
               <span class="socials__icon icon-facebook"></span>
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__link" href="#">
+            <a class="socials__link" href="#" aria-label="twitter">
               <span class="socials__icon icon-twitter"></span>
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__link" href="#">
+            <a class="socials__link" href="#" aria-label="instagram">
               <span class="socials__icon icon-instagram"></span>
             </a>
           </li>
