Improve accessibility by making header__menu and header__list wider, fix the focus event on menu__link and get rid of ids (change them to modifiers - beM)

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 
       <nav class="header__menu menu">
         <ul class="menu">
-          <li class="menu__item current__item">
+          <li class="menu__item ">
             <a href="#" class="menu__link">Home</a>
           </li>
           <li class="menu__item">
@@ -82,17 +82,17 @@
           </button>
         </li>
         <li class="list__item">
-          <button class="list__btn">
+          <button class="list__btn list__btn--amount">
             <img class="list__icon" src="img/compare.svg" alt="compare" />
           </button>
         </li>
         <li class="list__item">
-          <button class="list__btn">
+          <button class="list__btn list__btn--amount">
             <img class="list__icon" src="img/favourite.svg" alt="favourite" />
           </button>
         </li>
         <li class="list__item">
-          <button class="list__btn">
+          <button class="list__btn list__btn--amount">
             <img class="list__icon" src="img/basket.svg" alt="basket" />
           </button>
         </li>
@@ -247,17 +247,17 @@
     </section>
 
     <section class="banners">
-      <div class="banners__banner banner" id="banner--discount">
+      <div class="banners__banner banner banners__banner--discount">
         <h3 class="banner__title banner-title">
           up to<span>30% off</span>in everything
         </h3>
       </div>
-      <div class="banners__banner banner" id="banner--for-men">
+      <div class="banners__banner banner banners__banner--for-men">
         <h3 class="banner__title banner-title">
           many<span>products</span>for mens
         </h3>
       </div>
-      <div class="banners__banner banner" id="banner--dress-collection">
+      <div class="banners__banner banner banners__banner--dress-collection">
         <h3 class="banner__title banner-title">
           beautiful<span>women dress</span>collection
         </h3>
