Fix the hero__img background, add width and height to the images

--- a/src/index.html
+++ b/src/index.html
@@ -81,17 +81,17 @@
             <img class="list__icon" src="img/search.svg" alt="search" />
           </button>
         </li>
-        <li class="list__item">
+        <li class="list__item list__item--desktop">
           <button class="list__btn list__btn--amount">
             <img class="list__icon" src="img/compare.svg" alt="compare" />
           </button>
         </li>
-        <li class="list__item">
+        <li class="list__item list__item--desktop">
           <button class="list__btn list__btn--amount">
             <img class="list__icon" src="img/favourite.svg" alt="favourite" />
           </button>
         </li>
-        <li class="list__item">
+        <li class="list__item list__item--desktop">
           <button class="list__btn list__btn--amount">
             <img class="list__icon" src="img/basket.svg" alt="basket" />
           </button>
@@ -114,7 +114,7 @@
         </div>
         <img
           class="hero__img"
-          src="img/backgrounds/hero-bg.png"
+          src="img/backgrounds/hero-girl-1.png"
           alt="hero-img"
         />
       </div>
