Change icons to 'Material Design Iconic Font'

--- a/src/index.html
+++ b/src/index.html
@@ -3,36 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="Visit Luma and find out about Diverse Fashion Lines and Designer Wear. Start Shopping Now. Find the highest quality clothing, accessories and footwear.">
+    <meta
+      name="description"
+      content="Visit Luma and find out about Diverse Fashion Lines and Designer Wear. Start Shopping Now. Find the highest quality clothing, accessories and footwear."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Luma</title>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="img/icons/favicon.svg"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
+    />
     <link rel="stylesheet" href="css/style.min.css" />
-    <!-- <script type="text/javascript" src="../dist/js/main.min.js" defer></script> -->
+    <script type="text/javascript" src="js/main.min.js" defer></script>
   </head>
   <body>
     <header class="header">
       <ul class="header__socials socials">
         <li class="socials__item">
           <a class="socials__link" href="#" aria-label="linkedin">
-            <span class="socials__icon icon-linkedin"></span>
+            <i class="socials__icon zmdi zmdi-linkedin"></i>
           </a>
         </li>
         <li class="socials__item">
           <a class="socials__link" href="#" aria-label="facebook">
-            <span class="socials__icon icon-facebook"></span>
+            <i class="socials__icon zmdi zmdi-facebook"></i>
           </a>
         </li>
         <li class="socials__item">
           <a class="socials__link" href="#" aria-label="twitter">
-            <span class="socials__icon icon-twitter"></span>
+            <i class="socials__icon zmdi zmdi-twitter"></i>
           </a>
         </li>
         <li class="socials__item">
           <a class="socials__link" href="#" aria-label="instagram">
-            <span class="socials__icon icon-instagram"></span>
+            <i class="socials__icon zmdi zmdi-instagram"></i>
           </a>
         </li>
       </ul>
@@ -42,15 +54,14 @@
         <button class="language">EN</button>
       </div>
 
-      <span class="header__burger burger">
-      </span>
+      <span class="header__burger burger"></span>
       <a class="header__logo logo" href="#">
-        <img class="logo__icon" src="img/logo.svg" alt="logo" />
+        <img class="logo__icon" src="img/icons/logo.svg" alt="logo" />
       </a>
 
       <nav class="header__menu menu">
         <ul class="menu">
-          <li class="menu__item ">
+          <li class="menu__item">
             <a href="#" class="menu__link">Home</a>
           </li>
           <li class="menu__item">
@@ -73,27 +84,27 @@
       <ul class="header__list list">
         <li class="list__item">
           <button class="list__btn">
-            <img class="list__icon" src="img/account.svg" alt="account" />
+            <i class="zmdi zmdi-account"></i>
           </button>
         </li>
         <li class="list__item">
           <button class="list__btn">
-            <img class="list__icon" src="img/search.svg" alt="search" />
+            <i class="zmdi zmdi-search"></i>
           </button>
         </li>
         <li class="list__item list__item--desktop">
           <button class="list__btn list__btn--amount">
-            <img class="list__icon" src="img/compare.svg" alt="compare" />
+            <i class="zmdi zmdi-swap"></i>
           </button>
         </li>
         <li class="list__item list__item--desktop">
           <button class="list__btn list__btn--amount">
-            <img class="list__icon" src="img/favourite.svg" alt="favourite" />
+            <i class="zmdi zmdi-favorite"></i>
           </button>
         </li>
         <li class="list__item list__item--desktop">
           <button class="list__btn list__btn--amount">
-            <img class="list__icon" src="img/basket.svg" alt="basket" />
+            <i class="zmdi zmdi-shopping-basket"></i>
           </button>
         </li>
       </ul>
@@ -124,7 +135,7 @@
       <div class="feature__box">
         <img
           class="feature__icon"
-          src="img/free-delivery.svg"
+          src="img/features/free-delivery.svg"
           alt="fast-delivery"
         />
         <div class="feature__description">
@@ -135,7 +146,7 @@
       <div class="feature__box">
         <img
           class="feature__icon"
-          src="img/month-return.svg"
+          src="img/features/month-return.svg"
           alt="month-return"
         />
         <div class="feature__description">
@@ -146,7 +157,7 @@
       <div class="feature__box">
         <img
           class="feature__icon"
-          src="img/secure-payment.svg"
+          src="img/features/secure-payment.svg"
           alt="secure-payment"
         />
         <div class="feature__description">
@@ -157,7 +168,7 @@
       <div class="feature__box">
         <img
           class="feature__icon"
-          src="img/daily-support.svg"
+          src="img/features/daily-support.svg"
           alt="daily-support"
         />
         <div class="feature__description">
@@ -179,11 +190,11 @@
           />
           <h5 class="product__title">Radiant Tee</h5>
           <div class="product__stars rating">
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
           </div>
           <span class="product__reviews">0 Reviews</span>
           <span class="product__price">€32</span>
@@ -197,11 +208,11 @@
           />
           <h5 class="product__title">Mona Pullover Hoodlie</h5>
           <div class="product__stars rating">
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
           </div>
           <span class="product__reviews">83 Reviews</span>
           <span class="product__price">€54</span>
@@ -215,11 +226,11 @@
           />
           <h5 class="product__title">Hero Hoodie</h5>
           <div class="product__stars rating">
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
           </div>
           <span class="product__reviews">34 Reviews</span>
           <span class="product__price product__price--new">€59</span>
@@ -233,11 +244,11 @@
           />
           <h5 class="product__title">Circe Hooded Ice Fleece</h5>
           <div class="product__stars rating">
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
           </div>
           <span class="product__reviews">55 Reviews</span>
           <span class="product__price">€55</span>
@@ -278,11 +289,11 @@
           />
           <h5 class="product__title">Radiant Tee</h5>
           <div class="product__stars rating">
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
           </div>
           <span class="product__reviews">0 Reviews</span>
           <span class="product__price">€32</span>
@@ -295,11 +306,11 @@
           />
           <h5 class="product__title">Mona Pullover Hoodlie</h5>
           <div class="product__stars rating">
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
           </div>
           <span class="product__reviews">83 Reviews</span>
           <span class="product__price">€54</span>
@@ -312,11 +323,11 @@
           />
           <h5 class="product__title">Hero Hoodie</h5>
           <div class="product__stars rating">
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
           </div>
           <span class="product__reviews">34 Reviews</span>
           <span class="product__price">€59 €32</span>
@@ -329,11 +340,11 @@
           />
           <h5 class="product__title">Circe Hooded Ice Fleece</h5>
           <div class="product__stars rating">
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
           </div>
           <span class="product__reviews">55 Reviews</span>
           <span class="product__price">€55</span>
@@ -346,11 +357,11 @@
           />
           <h5 class="product__title">Hero Hoodie</h5>
           <div class="product__stars rating">
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
           </div>
           <span class="product__reviews">34 Reviews</span>
           <span class="product__price">€59 €32</span>
@@ -363,11 +374,11 @@
           />
           <h5 class="product__title">Circe Hooded Ice Fleece</h5>
           <div class="product__stars rating">
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
           </div>
           <span class="product__reviews">55 Reviews</span>
           <span class="product__price">€55</span>
@@ -381,11 +392,11 @@
           <h5 class="product__title">Radiant Tee</h5>
 
           <div class="product__stars rating">
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
           </div>
           <span class="product__reviews">0 Reviews</span>
           <span class="product__price">€32</span>
@@ -398,11 +409,11 @@
           />
           <h5 class="product__title">Mona Pullover Hoodlie</h5>
           <div class="product__stars rating">
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
-            <span class="rating__icon icon-star"></span>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
+            <i class="rating__icon zmdi zmdi-star"></i>
           </div>
           <span class="product__reviews">83 Reviews</span>
           <span class="product__price">€54</span>
@@ -428,7 +439,11 @@
           placeholder="Enter your e-mail"
         />
         <div class="form__agreement">
-          <input class="form__checkbox" type="checkbox" id="agreement-checkbox"/>
+          <input
+            class="form__checkbox"
+            type="checkbox"
+            id="agreement-checkbox"
+          />
           <label class="form__agreement-text" for="agreement-checkbox">
             I consent to the processing of personal data and agree to the
             <a href="#">Privacy policy</a>
@@ -441,27 +456,27 @@
     <footer class="footer">
       <div class="footer__contacts">
         <a class="footer__logo logo" href="#">
-          <img class="logo__icon" src="img/logo.svg" alt="logo" />
+          <img class="logo__icon" src="img/icons/logo.svg" alt="logo" />
         </a>
         <ul class="footer__socials socials">
           <li class="socials__item">
             <a class="socials__link" href="#" aria-label="linkedin">
-              <span class="socials__icon icon-linkedin"></span>
+              <i class="socials__icon zmdi zmdi-linkedin"></i>
             </a>
           </li>
           <li class="socials__item">
             <a class="socials__link" href="#" aria-label="facebook">
-              <span class="socials__icon icon-facebook"></span>
+              <i class="socials__icon zmdi zmdi-facebook"></i>
             </a>
           </li>
           <li class="socials__item">
             <a class="socials__link" href="#" aria-label="twitter">
-              <span class="socials__icon icon-twitter"></span>
+              <i class="socials__icon zmdi zmdi-twitter"></i>
             </a>
           </li>
           <li class="socials__item">
             <a class="socials__link" href="#" aria-label="instagram">
-              <span class="socials__icon icon-instagram"></span>
+              <i class="socials__icon zmdi zmdi-instagram"></i>
             </a>
           </li>
         </ul>
